--- a/src/components/css/Head.css
+++ b/src/components/css/Head.css
@@ -102,6 +102,10 @@
   margin: 3px 0px;
   padding-bottom: 3px;
 }
+.GNB a:hover {
+  color: #F4F4F4;
+  opacity: initial;
+}
 
 .GNB a.active {
   border-bottom: 2px solid #33B1FF;
