--- a/src/components/css/RightPanel.css
+++ b/src/components/css/RightPanel.css
@@ -44,6 +44,23 @@
   height: 250px;
 }
 
+.RPclosebtn{
+  width: 25px;
+  height: 60px;
+  position: absolute;
+  left: -25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background: rgba(52, 58, 63, 0.95);
+  color: rgba(255, 255, 255, 0.699);
+  font-size: 12px;
+  border-radius: 3px 0 0 3px;
+
+  cursor: pointer;
+}
+
 .eventList{
   overflow-y: scroll;
   height: 378px;
