--- a/src/components/css/LeftPanel.css
+++ b/src/components/css/LeftPanel.css
@@ -64,6 +64,24 @@
   margin: 0;
 }
 
+.LPclosebtn{
+  width: 25px;
+  height: 60px;
+  position: absolute;
+  top: 460px;
+  right: -25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background: rgba(52, 58, 63, 0.95);
+  color: rgba(255, 255, 255, 0.699);
+  font-size: 12px;
+  border-radius: 0 3px 3px 0;
+
+  cursor: pointer;
+}
+
 .systemCTitle {
   display: flex;
   justify-content: space-between;
